chore: add self intro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,6 +62,7 @@ const meta = {
   </div>
   <article class="introduction__box">
     <p>Rieogenです。読み方がわからないので、Rieと読んでください。</p>
+    <p>今まで自分の制作物をネットに上げてこなかったので、これから公開していくためにこのページを作りました。</p>
     <p>神奈川在住、東京のWeb系企業で働いています。</p>
     <p>高専出身で、高専時代はプロコンに出場したりしていました。</p>
     <p>技術書、小説などの本を読むのが好きなので、おすすめの本があれば教えてください。</p>
