chore: add img height width

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,8 +11,8 @@
   </div>
   <details class="mobile__menu">
     <summary class="mobile-button">
-      <img class="mobile-button__icon--burger" src="/icons/menu-burger.svg" height="20">
-      <img class="mobile-button__icon--cross" src="/icons/cross.svg" height="15" />
+      <img class="mobile-button__icon--burger" src="/icons/menu-burger.svg" width="20" height="20">
+      <img class="mobile-button__icon--cross" src="/icons/cross.svg" width="15" height="15" />
     </summary>
     <div class="header__menu--mobile" id="header-menu">
       <a href="/">Top</a>
