--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -57,7 +57,7 @@ const meta = {
 <Layout meta={meta}>
   <h1>{pageTitle}</h1>
   <div class="profile">
-    <img class="profile__icon" src="/profile_icon.png" alt="rieogen">
+    <img class="profile__icon" src="/profile_icon.png" alt="rieogen" width="150" height="150" />
     <p class="profile__name">Rieogen</p>
   </div>
   <article class="introduction__box">
