--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -88,7 +88,7 @@ const meta = {
     <div class="sns">
       {sns.map((sns) => (
         <a href={sns.url}>
-          <img src={sns.icon} height="30" width="30" >
+          <img src={sns.icon} alt={sns.name} height="30" width="30" >
           <p> - {sns.name}</p>
         </a>
       ))}
