chore: yarn format

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,5 @@
 ---
-import Social from './Social.astro';
+import Social from "./Social.astro";
 ---
-<footer>
-  &copy; 2024 Rieogen. All rights reserved.
-</footer>
+
+<footer>&copy; 2024 Rieogen. All rights reserved.</footer>
