--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import PostList from '@/components/PostList.astro';
-import ProjectList from '@/components/ProjectList.astro';
-import Layout from '@/layouts/Layout.astro';
-import { getAllPosts } from '@/utils/post';
-import { getAllProjects } from '@/utils/project';
+import PostList from "@/components/PostList.astro";
+import ProjectList from "@/components/ProjectList.astro";
+import Layout from "@/layouts/Layout.astro";
+import { getAllPosts } from "@/utils/post";
+import { getAllProjects } from "@/utils/project";
 
 const pageTitle = "Hello!!";
 const skills = [
@@ -41,19 +41,20 @@ const sns = [
     name: "@Rieogen",
     url: "https://twitter.com/rieogen",
     icon: "https://cdn.svgporn.com/logos/twitter.svg",
-  }
-]
+  },
+];
 
-const allPosts = await getAllPosts()
-const blogEntries = allPosts.slice(0, 3)
+const allPosts = await getAllPosts();
+const blogEntries = allPosts.slice(0, 3);
 const allProjects = await getAllProjects();
-const projectEntries = allProjects.slice(0, 3)
+const projectEntries = allProjects.slice(0, 3);
 // TODO: setting meta
 const meta = {
-	title: "Rieogen - Homepage",
-	description: "This is Rieogen's Homepage.",
+  title: "Rieogen - Homepage",
+  description: "This is Rieogen's Homepage.",
 };
 ---
+
 <Layout meta={meta}>
   <h1>{pageTitle}</h1>
   <div class="profile">
@@ -66,8 +67,9 @@ const meta = {
     <p>神奈川在住、東京のWeb系企業で働いています。</p>
     <p>高専出身で、高専時代はプロコンに出場したりしていました。</p>
     <p>技術書、小説などの本を読むのが好きなので、おすすめの本があれば教えてください。</p>
-    <p>休日は大抵パソコンと向き合ってイラストを描いたりしていますが、外に出る時はカメラを持ち写真を撮ることが好きです。</p>
-    
+    <p>
+      休日は大抵パソコンと向き合ってイラストを描いたりしていますが、外に出る時はカメラを持ち写真を撮ることが好きです。
+    </p>
   </article>
   <section class="introduction__box">
     <h2>Hobby</h2>
@@ -76,22 +78,26 @@ const meta = {
   <section class="introduction__box">
     <h2>Skills</h2>
     <div class="skill__icons">
-      {skills.map((skill) => (
-        <div>
-          <img src={skill.icon} alt={skill.name} height="30" width="30" >
-        </div>
-      ))}
+      {
+        skills.map(skill => (
+          <div>
+            <img src={skill.icon} alt={skill.name} height="30" width="30" />
+          </div>
+        ))
+      }
     </div>
   </section>
   <section class="introduction__box">
     <h2>SNS</h2>
     <div class="sns">
-      {sns.map((sns) => (
-        <a href={sns.url}>
-          <img src={sns.icon} alt={sns.name} height="30" width="30" >
-          <p> - {sns.name}</p>
-        </a>
-      ))}
+      {
+        sns.map(sns => (
+          <a href={sns.url}>
+            <img src={sns.icon} alt={sns.name} height="30" width="30" />
+            <p> - {sns.name}</p>
+          </a>
+        ))
+      }
     </div>
   </section>
   <section class="introduction__box">
