--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -1,17 +1,20 @@
 ---
-import ProjectPreview from '@/components/ProjectPreview.astro';
-import type { CollectionEntry } from 'astro:content';
+import ProjectPreview from "@/components/ProjectPreview.astro";
+import type { CollectionEntry } from "astro:content";
 
 interface Props {
   projectList: CollectionEntry<"projects">[];
-};
+}
 
 const { projectList } = Astro.props;
 ---
+
 <ul class="projects">
-  {projectList.map((project) => (
-    <li>
-      <ProjectPreview project={project} />
-    </li>
-  ))}
+  {
+    projectList.map(project => (
+      <li>
+        <ProjectPreview project={project} />
+      </li>
+    ))
+  }
 </ul>
