--- a/src/components/TagList.astro
+++ b/src/components/TagList.astro
@@ -5,8 +5,13 @@ interface Props {
 
 const { tagList } = Astro.props;
 ---
+
 <ul class="tags">
-  {tagList.map((tag) => (
-    <li class="tag"><a href={`/tags/${tag}`}>{tag}</a></li>
-  ))}
+  {
+    tagList.map(tag => (
+      <li class="tag">
+        <a href={`/tags/${tag}`}>{tag}</a>
+      </li>
+    ))
+  }
 </ul>
