--- a/src/layouts/MarkdownProjectLayout.astro
+++ b/src/layouts/MarkdownProjectLayout.astro
@@ -1,18 +1,19 @@
 ---
-import Layout from './Layout.astro';
+import Layout from "./Layout.astro";
 
 const { frontmatter } = Astro.props;
 const meta = {
-	description: "test",
-	title: "test",
+  description: "test",
+  title: "test",
 };
 ---
+
 <Layout meta={meta}>
   <slot />
 </Layout>
 <style>
   a {
-    color: #00539F;
+    color: #00539f;
   }
 
   .tags {
@@ -23,9 +24,9 @@ const meta = {
   .tag {
     margin: 0.25em;
     border: dotted 1px #a1a1a1;
-    border-radius: .5em;
-    padding: .5em 1em;
+    border-radius: 0.5em;
+    padding: 0.5em 1em;
     font-size: 1.15em;
-    background-color: #F8FCFD;
+    background-color: #f8fcfd;
   }
 </style>
