--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,8 +1,8 @@
 ---
-import { getAllPosts, getUniqueTags, sortPostsByDate } from '@/utils/post';
-import Layout from '@/layouts/Layout.astro'
-import PostList from '@/components/PostList.astro';
-import TagList from '@/components/TagList.astro';
+import { getAllPosts, getUniqueTags, sortPostsByDate } from "@/utils/post";
+import Layout from "@/layouts/Layout.astro";
+import PostList from "@/components/PostList.astro";
+import TagList from "@/components/TagList.astro";
 
 const allPosts = await getAllPosts();
 const sortPosts = sortPostsByDate(allPosts);
@@ -11,10 +11,11 @@ const allTags = await getUniqueTags();
 const pageTitle = "Blog";
 // TODO: setting meta
 const meta = {
-	description: "test",
-	title: "test",
+  description: "test",
+  title: "test",
 };
 ---
+
 <Layout meta={meta}>
   <h1>{pageTitle}</h1>
   <section class="tags__box">
