--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,17 +1,18 @@
 ---
-import { getAllPosts, getUniqueTags, sortPostsByDate } from '@/utils/post';
-import Layout from '@/layouts/Layout.astro'
-import ProjectList from '@/components/ProjectList.astro';
-import { getAllProjects } from '@/utils/project';
+import { getAllPosts, getUniqueTags, sortPostsByDate } from "@/utils/post";
+import Layout from "@/layouts/Layout.astro";
+import ProjectList from "@/components/ProjectList.astro";
+import { getAllProjects } from "@/utils/project";
 
 const allProjects = await getAllProjects();
 const pageTitle = "Projects";
 // TODO: setting meta
 const meta = {
-	description: "test",
-	title: "test",
+  description: "test",
+  title: "test",
 };
 ---
+
 <Layout meta={meta}>
   <h1>{pageTitle}</h1>
   <ProjectList projectList={allProjects} />
