--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -18,3 +18,11 @@ const { projectList } = Astro.props;
     ))
   }
 </ul>
+
+<style lang="scss">
+  .projects {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
+    gap: 1rem;
+  }
+</style>
