--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -67,10 +67,14 @@ const {
       margin-bottom: 50px;
     }
 
+    h1 {
+      font-size: 2rem;
+      font-weight: bold;
+    }
+
     a:hover {
       opacity: 0.7;
     }
   </style>
-
 
 </html>
