feat: tag list scss

--- a/src/components/PostPreview.astro
+++ b/src/components/PostPreview.astro
@@ -13,11 +13,25 @@ const postDate = getFormatDate(post.data.publishDate);
 ---
 
 <section class="postPreview">
-  <div class="heading">
+  <div class="postPreview__head">
     <p>{postDate}</p>
     <a href={`/posts/${post.slug}`}>
       <h3>{post.data.title}</h3>
     </a>
   </div>
   {isTagsVisible && <TagList tagList={post.data.tags} />}
+  <hr class="postPreview__divider" />
 </section>
+
+<style lang="scss">
+  .postPreview {
+    display: flex;
+    flex-direction: column;
+    padding: 8px;
+    gap: 8px;
+  }
+
+  .postPreview__divider {
+    border-top: 1px solid $text-light;
+  }
+</style>
