--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -8,8 +8,8 @@ const allProjects = await getAllProjects();
 const pageTitle = "Projects";
 // TODO: setting meta
 const meta = {
-  description: "test",
-  title: "test",
+  title: "Projects - Rieogen",
+  description: undefined,
 };
 ---
 
