--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -50,7 +50,7 @@ const allProjects = await getAllProjects();
 const projectEntries = allProjects.slice(0, 3);
 // TODO: setting meta
 const meta = {
-  title: "Rieogen - Homepage",
+  title: "Home - Rieogen",
   description: "This is Rieogen's Homepage.",
 };
 ---
