--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -29,3 +29,140 @@ const articleDate = getFormatDate(publishDate);
     <Content />
   </article>
 </Layout>
+
+<style lang="scss" is:global>
+  .postContent {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      font-weight: bold;
+    }
+    h1 {
+      font-size: 2.5em;
+    }
+
+    h2 {
+      font-size: 2em;
+    }
+
+    h3 {
+      font-size: 1.75em;
+    }
+
+    h4 {
+      font-size: 1.5em;
+    }
+    h5 {
+      font-size: 1.25em;
+    }
+    h6 {
+      font-size: 1em;
+    }
+
+    p {
+      margin: 0 0.5rem;
+    }
+
+    strong {
+      font-weight: bold;
+    }
+
+    em {
+      font-style: italic;
+    }
+
+    del {
+      text-decoration: line-through;
+    }
+
+    hr {
+      border-top: 1px solid #333;
+      margin: 1em 0;
+    }
+
+    ul {
+      padding-left: 1.5em;
+      list-style-type: disc;
+
+      li {
+        margin: 0.5em 0;
+      }
+    }
+
+    ol {
+      padding-left: 1.5em;
+      list-style-type: decimal;
+
+      li {
+        margin: 0.5em 0;
+      }
+    }
+
+    blockquote {
+      margin: 0.5em 0;
+      padding: 0.5em 1em;
+      border-left: 5px solid #ccc;
+      font-style: italic;
+
+      p {
+        margin: 0;
+      }
+    }
+    pre {
+      padding: 1em;
+      border-radius: 5px;
+      overflow-x: auto;
+
+      code {
+        font-family: "Courier New", Courier, monospace;
+        background: none;
+        padding: 0;
+        color: $text-dark;
+      }
+    }
+
+    code {
+      font-family: "Courier New", Courier, monospace;
+      background-color: #f9f2f4;
+      color: #c7254e;
+      padding: 0.2em 0.4em;
+      border-radius: 3px;
+    }
+
+    a {
+      color: #007acc;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin: 1em 0;
+
+      th,
+      td {
+        border: 1px solid #ddd;
+        padding: 0.5em;
+        text-align: left;
+      }
+
+      th {
+        background-color: #f5f5f5;
+      }
+      td {
+        background-color: #fff;
+      }
+    }
+
+    img {
+      margin: 0.5em 0;
+    }
+
+    sup {
+      font-size: 0.75em;
+      vertical-align: super;
+    }
+  }
+</style>
