--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,10 +26,7 @@ const {
     <link rel="icon" type="image/svg+xml" href="/profile_icon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic&display=swap" rel="stylesheet" as="style" onload="this.onload=null;this.rel='stylesheet'" />
-    <noscript>
-      <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic&display=swap" rel="stylesheet" />
-    </noscript>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic&display=swap" as="style" onload="this.removeAttribute('onload');this.removeAttribute('as');this.rel='stylesheet';">
 
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
