chore: add icons

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,38 +9,38 @@ const pageTitle = "Hello!!";
 const skills = [
   {
     name: "C++",
-    icon: "https://cdn.svgporn.com/logos/c-plusplus.svg",
+    icon: "/icons/c-plusplus.svg",
   },
   {
     name: "TypeScript",
-    icon: "https://cdn.svgporn.com/logos/typescript-icon.svg",
+    icon: "/icons/typescript-icon.svg",
   },
   {
     name: "Python",
-    icon: "https://cdn.svgporn.com/logos/python.svg",
+    icon: "/icons/python.svg",
   },
   {
     name: "React",
-    icon: "https://cdn.svgporn.com/logos/react.svg",
+    icon: "/icons/react.svg",
   },
   {
     name: "Astro",
-    icon: "https://cdn.svgporn.com/logos/astro-icon.svg",
+    icon: "/icons/astro-icon.svg",
   },
   {
     name: "Docker",
-    icon: "https://cdn.svgporn.com/logos/docker-icon.svg",
+    icon: "/icons/docker-icon.svg",
   },
   {
     name: "GitHub",
-    icon: "https://cdn.svgporn.com/logos/github-icon.svg",
+    icon: "/icons/github-icon.svg",
   },
 ];
 const sns = [
   {
     name: "@Rieogen",
     url: "https://twitter.com/rieogen",
-    icon: "https://cdn.svgporn.com/logos/twitter.svg",
+    icon: "/icons/twitter.svg",
   },
 ];
 
