--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -20,7 +20,7 @@ const meta = {
   <h1>{pageTitle}</h1>
   <section class="tagSection">
     <h2>Tags</h2>
-    <TagList tagList={allTags} />
+    <TagList tagList={allTags} limit={10} isRandom={true} />
   </section>
   <section class="postSection">
     <h2>Posts</h2>
