--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,6 +42,11 @@ const sns = [
     url: "https://twitter.com/rieogen",
     icon: "/icons/twitter.svg",
   },
+  {
+    name: "Rieogen",
+    url: "https://www.pixiv.net/users/103967837",
+    icon: "/icons/pixiv-icon.png",
+  },
 ];
 
 const allPosts = await getAllPosts();
@@ -90,10 +95,10 @@ const meta = {
     </section>
     <section class="introductionBox">
       <h2>SNS</h2>
-      <div class="introductionBox__icons">
+      <div class="introductionBox__snsIcons">
         {
           sns.map(sns => (
-            <a class="introductionBox__icons--snslink" href={sns.url}>
+            <a class="introductionBox__snsIcons--link" href={sns.url}>
               <img src={sns.icon} alt={sns.name} height="30" width="30" />
               <p> - {sns.name}</p>
             </a>
@@ -148,8 +153,16 @@ const meta = {
         display: flex;
         gap: 1rem;
         margin: 0 8px;
+      }
 
-        &--snslink {
+      &__snsIcons {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 1rem;
+        margin: 0 8px;
+
+        &--link {
           display: flex;
           font-size: 1.2rem;
         }
